crates/compiler/test_syntax/tests/snapshots/pass/ann_where_e_newline_implements.expr.formatted.roc
J :
    [
    ] where e
        implements T
i